tests/suite/fail/generated/borrow/fail_move_eat_input.ny
fn eat(x: string) -> void { print(x) }
fn main() {
    let input = "hello"
    eat(input)
    print(input) //~ ERROR was moved
}
